2003-10-16  Araki Ken  <arakiken@users.sf.net>

	* A snapshot file name must not contain ".." and its suffix is
	  always ".snp" for security issues.

2003-10-12  Araki Ken  <arakiken@users.sf.net>

	* 'snapshot' protocol allows no value.

2003-10-12  Araki Ken  <arakiken@users.sf.net>

	* Added 'snapshot' to 5379 protocol.

2003-10-12  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.ja: Updated and fixed typo.

2003-10-12  Araki Ken  <arakiken@users.sf.net>

	* Removed tool/viewsfml/.

	* Added tool/accessories/.

2003-10-12  Araki Ken  <arakiken@users.sf.net>

	* mlmenu/main.c: Fixed a critical bug.

	* mlmenu/Makefile: Removed.

	* configure.in: mlmenu can be specified as a value of --with-tools option.

2003-10-12  Araki Ken  <arakiken@users.sf.net>

	* x_font_config.[ch]: Renamed x_configize_... to x_customize_...

	* version.h.in: Validated CVS_REVISION.

2003-10-12  Araki Ken  <arakiken@users.sf.net>
	
	* Minor cleanups.

2003-10-12  Araki Ken  <arakiken@users.sf.net>

	* mlmenu/main.c: ~/.mlterm/menu couldn't be loaded correctly. Fixed.

2003-10-11  Araki Ken  <arakiken@users.sf.net>

	* Renamed font_custom and color_custom to font_config and font_custom.

	* Added x_main_config.[ch] pulled out from x_term_manager.c

2003-10-11  Araki Ken  <arakiken@users.sf.net>

	* After options saved by 5382 or 5383 protocol, new terminals start
	  with the new options.

2003-10-11  Araki Ken  <arakiken@users.sf.net>

	* Added -&,--borderless,borderless option.

	* Added tool/mlmenu.

2003-10-05  Araki Ken  <arakiken@users.sf.net>

	* 2.8.0 released.
	  (tag "rel-2_8_0")

	* Visual bel didn't work as expected. Fixed.

2003-10-04  Araki Ken  <arakiken@users.sf.net>

	* Added --with-tools and --with-scrollbars description to README and
	  README.ja.

2003-10-01  Araki Ken  <arakiken@users.sf.net>

	* Modified some documents.

2003-10-01  MINAMI Hirokazu  <minami@lissie.chem.s.u-tokyo.ac.jp>

	* etc/*aafont: UCS2->UCS4

2003-09-30  Araki Ken  <arakiken@users.sf.net>
